--- a/home.html
+++ b/home.html
@@ -5,7 +5,6 @@
 <script type="text/javascript">
 window.onload = function () {
     var conn;
-    var msg = document.getElementById("msg");
     var log = document.getElementById("log");
 
     function appendLog(item) {
@@ -17,31 +16,38 @@ window.onload = function () {
     }
 
     document.getElementById("form").onsubmit = function () {
-        if (!conn) {
-            return false;
-        }
-        if (!msg.value) {
-            return false;
-        }
-        conn.send(msg.value);
-        msg.value = "";
         return false;
     };
 
     document.getElementById("subscribe_bloom").onclick = function() {
-        conn.send("subscribeBloom Testing test 0 0");
+        if(!conn) {
+            return false;
+        }
+        var bloom =  document.getElementById("bloom").value || "Testing test 0 0";
+        var mempool = document.getElementById("bloom_mempool").value;
+        conn.send("subscribeBloom " + bloom + mempool);
     }
 
-
     document.getElementById("subscribe_addr").onclick = function() {
-        conn.send("subscribeAddress PRfoY8kvU7FX3DU9n7PB5sgMa6CBcwGtPa");
+        if(!conn) {
+            return false;
+        }
+        var addr =  document.getElementById("addr").value || "PRfoY8kvU7FX3DU9n7PB5sgMa6CBcwGtPa";
+        var mempool = document.getElementById("addr_mempool").value;
+        conn.send("subscribeAddress " + addr + mempool);
     }
 
     document.getElementById("unsubscribe_all").onclick = function() {
+        if(!conn) {
+            return false;
+        }
         conn.send("unsubscribeAll");
     }
 
     document.getElementById("subscribe_block").onclick = function() {
+        if(!conn) {
+            return false;
+        }
         conn.send("subscribeBlock");
     }
 
@@ -89,7 +95,7 @@ body {
     top: 0.5em;
     left: 0.5em;
     right: 0.5em;
-    bottom: 3em;
+    bottom: 12.5em;
     overflow: auto;
 }
 
@@ -107,14 +113,23 @@ body {
 </head>
 <body>
 <div id="log"></div>
-<form id="form">
-    <input type="submit" value="Send" />
-    <input type="text" id="msg" size="64"/>
-
-    <button id="subscribe_bloom">Subscribe Bloom</button>
-    <button id="subscribe_addr">Subscribe Address</button>
-    <button id="subscribe_block">Subscribe Block</button>
-    <button id="unsubscribe_all">Unsubscribe All</button>
-</form>
+    <form id="form">
+        <fieldset>
+            <input type="text" id="bloom" size="64"/>
+            <input type="checkbox" id="bloom_mempool"/><span>Mempool?</span>
+            <button id="subscribe_bloom">Subscribe Bloom</button>
+        </fieldset>
+        <fieldset>
+            <input type="text" id="addr" size="64"/>
+            <input type="checkbox" id="addr_mempool"/><span>Mempool?</span>
+            <button id="subscribe_addr">Subscribe Address</button>
+        </fieldset>
+        <fieldset>
+            <button id="subscribe_block">Subscribe Block</button>
+        </fieldset>
+        <fieldset>
+            <button id="unsubscribe_all">Unsubscribe All</button>
+        </fieldset>
+    </form>
 </body>
 </html>
